src/test/ui/coherence/coherence-cross-crate-conflict.re.stderr
error[E0119]: conflicting implementations of trait `trait_impl_conflict::Foo` for type `isize`:
  --> $DIR/coherence-cross-crate-conflict.rs:12:1
   |
LL | impl<A> Foo for A {
   | ^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `trait_impl_conflict`:
           - impl trait_impl_conflict::Foo for isize;

error[E0210]: type parameter `A` must be used as the type parameter for some local type (e.g., `MyStruct<A>`)
  --> $DIR/coherence-cross-crate-conflict.rs:12:1
   |
LL | impl<A> Foo for A {
   | ^^^^^^^^^^^^^^^^^ type parameter `A` must be used as the type parameter for some local type
   |
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0119, E0210.
For more information about an error, try `rustc --explain E0119`.
